--- a/rhc/app/views/locations/index.html.haml
+++ b/rhc/app/views/locations/index.html.haml
@@ -10,6 +10,6 @@
   %tbody
     -@locations.each do |loc|
       %tr
-        %td.title #{loc.title}
+        %td.title= link_to "#{loc.title}", location_path(loc)
         %td.description #{loc.description}
-        %td.details #{loc.reverse_geocode}
+        %td.details #{loc.short_address}
