create controller method, change to datetime field in form

--- a/rhc/app/views/events/new.html.haml
+++ b/rhc/app/views/events/new.html.haml
@@ -15,8 +15,8 @@
       =f.text_field :address
 
     .field
-      =f.label :datetime, "Date and Time"
-      =f.text_field :datetime
-
+      = f.label :datetime, "Date and Time"
+      = f.datetime_field :datetime
     .field
-      =f.submit "Create event"
+      =f.submit
+      =link_to "Back to Events Page", events_path
