Squashed commit of the following:
commit 4eda7b0d105bd90eb47c8f4da786fc12bacded6c
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Sun Nov 5 23:31:11 2017 -0500

    Missed expectation on merge

commit 11c7206fac83075726fde1c87884e7b13f3bf8e1
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Sun Nov 5 23:28:21 2017 -0500

    Merge errors

commit e16e5454d715f49985bb94a09268f67fb867684f
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Sun Nov 5 23:25:26 2017 -0500

    removed mention of cucumber

commit 1c8ea1f1fac935fec295ba11516c596e54a692b0
Merge: 443a163 4f494f7
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Sun Nov 5 23:21:40 2017 -0500

    Intermediate merge

commit 4f494f7dfbe0f57e594a7e07c3226d4b95085599
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Sun Nov 5 22:07:42 2017 -0500

    Removed Log

commit 632c6b18318298a54d4d2ac842aa7705fa42d42e
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Wed Nov 1 21:27:26 2017 -0400

    Removed cucumber. Created index view simple layout. Tested and created event area function

commit 9c3d1a2e8d34cdea60a65d5925a18d33b1b4e710
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Wed Nov 1 13:31:56 2017 -0400

    Cucumber scenario for listing events

commit 8a4c0fdd3c11c330fe23299b2c30eb61e8855879
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Wed Nov 1 12:49:26 2017 -0400

    Event seeds and model comment

commit 311f608bad40c46736dc209f33d0d06550804072
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Wed Nov 1 12:26:18 2017 -0400

    Installed cucumber

commit d564d44ed45de1ddb05dab07fb85113fd2ef47d1
Author: Franklin van Nes <franklin.vannes@gmail.com>
Date:   Wed Nov 1 12:23:57 2017 -0400

    Generated EventController files

--- a/rhc/app/views/events/index.html.haml
+++ b/rhc/app/views/events/index.html.haml
@@ -1,1 +1,7 @@
-
+%h2 Upcoming Events
+- last_date = nil
+- @upcoming_events.each do |event|
+  - if last_date != event.date
+    - last_date = event.date
+    %h3.date= event.readable_date
+  %p.event-title= link_to "#{event.title} - #{event.area}", event_path(event)
