--- a/rhc/app/views/locations/index.html.haml
+++ b/rhc/app/views/locations/index.html.haml
@@ -1,5 +1,10 @@
 %h3.header Locations
 
+- if (!flash[:notice].nil?)
+  %p.notice= flash[:notice]
+- if (!flash[:warning].nil?)
+  %p.warning= flash[:warning]
+
 %table.table
   %thead
     %tr
