--- a/rhc/app/views/events/_event_form_template.html.haml
+++ b/rhc/app/views/events/_event_form_template.html.haml
@@ -1,15 +1,15 @@
 .field
   =form.label :title, "Title"
-  =form.text_field :title
+  =form.text_field :title, required: :true
 
 .field
   =form.label :description, "Description"
-  =form.text_field :description
+  =form.text_field :description, required: :true
 
 .field
   =form.label :address, "Address"
-  =form.text_field :address
+  =form.text_field :address, required: :true
 
 .field
   = form.label :datetime, "Date and Time"
-  = form.datetime_field :datetime
+  = form.datetime_field :datetime, required: :true
