Links to event create and edit

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -4,4 +4,6 @@
 %h4 #{@event.readable_date}
 %h4 #{@event.address}
 
-=link_to 'Back to list of events',events_path 
+%p= link_to "Edit event", edit_event_url(@event)
+
+=link_to 'Back to list of events',events_path
