--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,6 @@
 %h3.header RHCWebsite Home
 %p.location-link= link_to "Locations", locations_url
 %p.event-link= link_to "Events", events_url
+%br
+%p
+    %strong= link_to "Add your event here!", new_event_url
