new location form, template form, #new controller method

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -19,4 +19,5 @@
         %td.description #{loc.description}
         %td.details #{loc.short_address}
 
+%p= link_to "Add new location", new_location_url
 %p.home-link= link_to "Back to Home", root_url
