--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,22 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Rhc
+    - if @title
+      %title= @title + " - Madison Country RHC"
+    - else
+      %title Madison County RHC
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+
+    - if (!flash[:success].nil?)
+      %p.notice= flash[:notice]
+    - if (!flash[:warning].nil?)
+      %p.warning= flash[:warning]
+    - if (!flash[:danger].nil?)
+      %p.danger= flash[:danger]
+    - if (!flash[:info].nil?)
+      %p.info= flash[:info]
+
     = yield
