--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -17,6 +17,6 @@
       %tr
         %td.title= link_to "#{loc.title}", location_path(loc)
         %td.description #{loc.description}
-        %td.details #{loc.short_address}
+        %td.details #{loc.address}
 
 %p.home-link= link_to "Back to Home", root_url
