--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,6 +1,8 @@
 %h3.header #{@location.title}
 
 %h4 #{@location.description}
-%h4 #{@location.reverse_geocode}
+%h4 #{@location.address}
+%h5 Latitude: #{@location.lat}
+%h5 Longitude: #{@location.lng}
 
 =link_to 'Back to locations', locations_path
