NavBar and modified html header tag priority

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-%h3.header RHCWebsite Home
+%h2.header Home
 %p.location-link= link_to "Locations", locations_url
 %p.event-link= link_to "Events", events_url
 %br
