--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,19 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %nav.navbar-expand-lg.navbar.navbar.container-fluid.navbar-light.bg-light
+      %a.navbar-brand{:href => "/"} Madison County RHC
+      %ul.navbar-nav.mr-auto.ml-2.justify-content-center
+        %li.nav-item
+          %form.form-inline.my-2.my-lg-0
+            %input.form-control.search-bar.mr-sm-2{type: :search, placeholder: :Search}
+            %button.btn.btn-outline-success.my-2.my-sm.0{type: :submit} Search
+        %li.nav-item.my-2
+          =link_to "Events", events_path, class: "nav-link"
+        %li.nav-item.my-2
+          =link_to "Locations", locations_path, class: "nav-link"
+
+
 
     - if (!flash[:success].nil?)
       %p.notice= flash[:notice]
@@ -20,4 +33,4 @@
     - if (!flash[:info].nil?)
       %p.info= flash[:info]
 
-    = yield
+    .container= yield
