--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
 
 
     - if (!flash[:success].nil?)
-      %p.notice.alert.alert-success= flash[:notice]
+      %p.notice.alert.alert-success= flash[:success]
     - if (!flash[:warning].nil?)
       %p.warning.alert.alert-warning= flash[:warning]
     - if (!flash[:danger].nil?)
