Added image to event form

--- a/app/views/events/_event_form_template.html.haml
+++ b/app/views/events/_event_form_template.html.haml
@@ -13,3 +13,7 @@
 .field
   = form.label :datetime, "Date and Time"
   = form.datetime_field :datetime, required: :true
+
+.field
+  = form.label :image, "Event Image"
+  = form.file_field :image, required: :false
