--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -21,4 +21,4 @@
     - else
         =link_to 'Submit a new event summary', new_event_event_recap_url(@event)
 
-=link_to 'Back to list of events',events_path
+=link_to 'Back to list of events',events_url
