--- a/app/views/event_recaps/edit.html.haml
+++ b/app/views/event_recaps/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @event_recap
+= link_to 'Show', event_event_recap_path(@event)
 \|
-= link_to 'Back', event_recaps_path
+= link_to 'Back', event_path(@event)
