Added image to location form

--- a/app/views/locations/_location_form_template.html.haml
+++ b/app/views/locations/_location_form_template.html.haml
@@ -9,3 +9,7 @@
 .field
   =form.label :address, "Address"
   =form.text_field :address, required: :true
+
+.field
+  = form.label :image, "Location Image"
+  = form.file_field :image, required: :false
