--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -9,6 +9,7 @@
 %table.table
   %thead
     %tr
+      %th Image
       %th Title
       %th Description
       %th Address
@@ -16,6 +17,8 @@
   %tbody
     -@locations.each do |loc|
       %tr
+        -if loc.image.present?
+          %td.image= image_tag(loc.image.url(:thumb), :alt => %Q"Picture of #{loc.title}")
         %td.title= link_to "#{loc.title}", location_path(loc)
         %td.description #{loc.description}
         %td.details #{loc.address}
