--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,3 +1,5 @@
+-if @location.image.present?
+    .location-image= image_tag(@location.image.url(:header), :alt => %Q"#{@location.title} header image")
 %h2.header #{@location.title}
 
 %h4 #{@location.description}
