--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,4 +45,4 @@
     - if (!flash[:alert].nil?)
       %p.notice.alert.alert-warning= flash[:alert]
 
-    .container= yield
+    .container.content-wrapper= yield
