New event page bootstrap styling

--- a/app/views/events/_event_form_template.html.haml
+++ b/app/views/events/_event_form_template.html.haml
@@ -1,19 +1,19 @@
-.field
+.field.form-group
   =form.label :title, "Title"
-  =form.text_field :title, required: :true
+  =form.text_field :title, required: :true, class: 'form-control'
 
-.field
+.field.form-group
   =form.label :description, "Description"
-  =form.text_field :description, required: :true
+  =form.text_field :description, required: :true, class: 'form-control'
 
-.field
+.field.form-group
   =form.label :address, "Address"
-  =form.text_field :address, required: :true
+  =form.text_field :address, required: :true, class: 'form-control'
 
-.field
+.field.form-group
   = form.label :datetime, "Date and Time"
-  = form.datetime_field :datetime, required: :true
+  = form.datetime_field :datetime, required: :true, class: 'form-control'
 
-.field
+.field.form-group
   = form.label :image, "Event Image"
   = form.file_field :image, required: :false
