--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -13,6 +13,7 @@
       %th Title
       %th Description
       %th Address
+      %th Upvotes
 
   %tbody
     -@locations.each do |loc|
@@ -22,6 +23,7 @@
         %td.title= link_to "#{loc.title}", location_path(loc)
         %td.description #{loc.description}
         %td.details #{loc.address}
+        %td.rating #{loc.rating}
 
 %p= link_to "Add new location", new_location_url
 %p.home-link= link_to "Back to Home", root_url
