--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -7,5 +7,8 @@
 %h5 Latitude: #{@location.lat}
 %h5 Longitude: #{@location.lng}
 
+%p= link_to "Edit Location", edit_location_url(@location)
+
+
 
 =link_to 'Back to locations', locations_path
