--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,11 +1,14 @@
--if @location.image.present?
-    .location-image= image_tag(@location.image.url(:header), :alt => %Q"#{@location.title} header image")
-%h2.header #{@location.title}
+.container
+    -if @location.image.present?
+        .location-image= image_tag(@location.image.url(:header), :alt => %Q"#{@location.title} header image")
+    %h2.header #{@location.title}
 
-%h4 #{@location.description}
-%h4 #{@location.address}
-%h5 Latitude: #{@location.lat}
-%h5 Longitude: #{@location.lng}
+    %h5 Description:
+    %p #{@location.description}
+    %h5 Address:
+    %p #{@location.address}
 
+    -if @admin
+        %p= link_to "Edit location", edit_location_path(@location)
 
 =link_to 'Back to locations', locations_path
