--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -26,6 +26,6 @@
         %td.title= link_to "#{loc.title}", location_path(loc)
         %td.description #{loc.description}
         %td.details #{loc.address}
-
-= link_to "Add new location", new_location_url, class: 'btn btn-primary'
+-if @admin
+  = link_to "Add new location", new_location_url, class: 'btn btn-primary'
 = link_to "Back to Home", root_url,  class: 'btn btn-secondary home-link'
