Check admin to add location from home

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,5 +4,6 @@
 %br
 %p
     %strong= link_to "Add your event here!", new_event_url
-%p
-    %strong= link_to "Add new location!", new_location_url
+-if @admin
+    %p
+        %strong= link_to "Add new location!", new_location_url
