--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -2,8 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.location-image {
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
+.no-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.cover-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
