--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -2,13 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.no-padding {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 .cover-img {
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+
+.contents {
+  margin-left: 10%;
 }
