--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,32 +9,24 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
   %body
-    %nav.navbar-expand-lg.navbar.navbar.container-fluid.navbar-light.bg-light
-      %a.navbar-brand{:href => "/"} Madison County RHC
-      %ul.navbar-nav.mr-auto.ml-2.justify-content-center
-        %li.nav-item
-          %form.form-inline.my-2.my-lg-0
-            %input.form-control.search-bar.mr-sm-2{type: :search, placeholder: :Search}
-            %button.btn.btn-outline-success.my-2.my-sm.0{type: :submit} Search
-        %li.nav-item.my-2
-          =link_to "Events", events_path, class: "nav-link"
-        %li.nav-item.my-2
-          =link_to "Locations", locations_path, class: "nav-link"
-      %ul.navbar-nav.mr-auto-ml-2.auth-btns
-        - if user_signed_in?
-          %li.nav-item
-            %btn.btn-primary
-              =link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link"
-        - else
-          %li.nav-item
-            %btn.btn-primary
-              =link_to "Login", new_user_session_path, class: "nav-link"
-          %li.nav-item
-            %btn.btn-outline-primary
-              =link_to "Sign up", new_user_registration_path, class: "nav-link"
+    %nav.navbar.navbar-default.navbar-expand-lg.navbar-light.bg-light.sticky-top{:role => "navigation"}
+      .navbar-header
+        .navbar-brand= link_to "Madison County RHC", root_path
+        %button.navbar-toggler{"data-target" => "#collapsed-bar", "data-toggle" => "collapse", type: "button"}
+          %span.navbar-toggler-icon
 
-
+      .collapse.navbar-collapse{:id => "collapsed-bar"}
+        %ul.navbar-nav
+          %li.nav-item.my-2= link_to "Events", events_path, class: "nav-link"
+          %li.nav-item.my-2= link_to "Locations", locations_path, class: "nav-link"
+        %ul.navbar-nav.ml-auto
+          - if user_signed_in?
+            %li.nav-item.my-2= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link"
+          - else
+            %li.nav-item.my-2= link_to "Login", new_user_session_path, class: "nav-link"
+            %li.nav-item.my-2= link_to "Sign up", new_user_registration_path, class: "nav-link"
 
     - if (!flash[:success].nil?)
       %p.notice.alert.alert-success= flash[:success]
