Add brand image

--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -5,13 +5,8 @@
 .cover-img {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  width: 100%;
 }
-
-.contents {
-  margin-left: 10%;
-}
-
 .rounded {
   border-radius: 10px;
 }
