--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -13,7 +13,7 @@
 
 .container-fluid
   -@locations.in_groups_of(3).each do |row|
-    .row
+    .row.top-spacing
       - row.each do |col|
         - if col
           .col-lg-4.col-md-6.col-sm-12
