--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -5,7 +5,9 @@
 .cover-img {
   width: 100%;
   height: 300px;
-  width: 100%;
+  object-fit: cover;
+  // top: 0;
+  // left: 0;
 }
 .rounded {
   border-radius: 10px;
