--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,8 +17,8 @@
           %span
             = image_tag("/assets/rhcBrand.svg", :alt => "", :height => "40", :width => "40", :class => "d-inline-block")
             = "Madison County"
-          %button.navbar-toggler{"data-target" => "#collapsed-bar", "data-toggle" => "collapse", type: "button"}
-            %span.navbar-toggler-icon
+        %a.navbar-toggler{"data-target" => "#collapsed-bar", "data-toggle" => "collapse", type: "button"}
+          %span.navbar-toggler-icon
 
       .collapse.navbar-collapse{:id => "collapsed-bar"}
         %ul.navbar-nav
