Fix naming error

--- a/app/views/locations/edit.html.haml
+++ b/app/views/locations/edit.html.haml
@@ -1,5 +1,5 @@
 #main
-  %h2.header Add a new location
+  %h2.header Edit location
 
   =form_for @location, :method => :put do |f|
     =render 'location_form_template', form: f
