--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -4,7 +4,7 @@
 
 .cover-img {
   width: 100%;
-  height: 300px;
+  height: 400px;
   object-fit: cover;
 }
 .rounded {
@@ -29,7 +29,6 @@
 .header {
   font-size: 35px;
   font-weight: bold;
-  padding: 10px 0px 10px 0px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -47,6 +46,10 @@
 
 .spacing {
   padding: 10px 0px 10px 0px;
+}
+
+.filter-btn {
+  margin-top: 30px;
 }
 
 // .grow { transition: all .2s ease-in-out; }
