--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$text-color: #424651;
+
 .cover-img {
   width: 100%;
   height: 400px;
@@ -16,6 +18,7 @@
   font-size: 20px;
   text-decoration: none;
   border: none;
+  color: $text-color
 }
 
 .cell-subtitle {
@@ -31,17 +34,20 @@
   font-weight: bold;
   margin-left: auto;
   margin-right: auto;
+  color: $text-color
 }
 
 .section-title {
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 10px;
+  color: $text-color
 }
 
 .section-subtitle {
   font-weight: normal;
   font-size: 17px;
+  color: $text-color
 }
 
 .spacing {
