--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,8 @@
           - else
             %li.nav-item.my-2= link_to "Login", new_user_session_path, class: "nav-link"
             %li.nav-item.my-2= link_to "Sign up", new_user_registration_path, class: "nav-link"
+        - if current_user.try(:admin)
+          %span.navbar-text.admin-text Admin
 
     - if (!flash[:success].nil?)
       %p.notice.alert.alert-success= flash[:success]
