--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -1,5 +1,5 @@
 #main
-  %h2.header Create a New Event!
+  %h2.header New event
 
   =form_for @event, class: 'form', :method => :post do |f|
     =render 'event_form_template', form: f
