--- a/app/views/locations/new.html.haml
+++ b/app/views/locations/new.html.haml
@@ -1,6 +1,6 @@
 #main.container
   =flash[:error]
-  %h3.header Create a New Location!
+  %h3.header New location
 
   =form_for @location, :method => :post do |f|
     =render 'location_form_template', form: f
