--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,12 +1,20 @@
 -if @location.image.present?
     =image_tag(@location.image.url(:header), :alt => %Q"#{@location.title} header image", :class => 'cover-img')
 
-.container
-    .header #{@location.title}
-    .section-subtitle #{@location.address}
-    %hr
-    .section-title About
-    .section-subtitle #{@location.description}
+.container-fluid
+    .row.top-spacing
+        .col-6
+            .header #{@location.title}
+            .section-subtitle #{@location.address}
+            %hr
+            .section-title About
+            .section-subtitle #{@location.description}
+        .col-6.text-center
+            -if @google_src
+                %iframe{:width => "100%",
+                    :height => "300", :frameborder => "0",
+                    :style => "border:0",
+                    :src => @google_src}
 
     .top-spacing
         =link_to 'Back to locations', locations_path, class: 'btn btn-outline-secondary btn-sm spacing'
