--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -10,18 +10,16 @@
     .col-6.text-left
       =submit_tag "Refine the list of locations", class: 'btn btn-primary filter-btn'
 
-.container-fluid
-  -@locations.in_groups_of(3).each do |row|
-    .row.top-spacing
-      - row.each do |col|
-        - if col
-          .col-lg-4.col-md-6.col-sm-12
-            .card.text-center
-              -if col.image.present?
-                =image_tag(col.image.url(:grid), :alt => %Q"Picture of #{col.title}", :class =>"card-img-top")
-              %a.card-title= link_to "#{col.title}", location_path(col)
+.card-columns
+  -@locations.each do |loc|
+    .card
+      -if loc.image.present?
+        = image_tag(loc.image.url(:grid), :alt => %Q"Picture of #{loc.title}", :class =>"card-img-top")
+      .card-body
+        %h4.card-title #{loc.title}
+        = link_to "Details", location_path(loc), class: "btn btn-outline-primary btn-sm"
 
-.top-spacing
-  = link_to "Back to Home", root_url, class: 'btn btn-outline-secondary btn-sm spacing home-link'
+%br
+  = link_to "Back to Home", root_url, class: 'btn btn-secondary btn-sm spacing home-link'
   -if @admin
     = link_to "Add new location", new_location_url, class: 'btn btn-primary btn-sm spacing'
